--- a/config/db-config.json
+++ b/config/db-config.json
@@ -1,5 +1,5 @@
 {
-    "host": "localhost",
+    "host": "testdb.cergfpiaziwa.us-east-1.rds.amazonaws.com",
     "port": 3306,
     "user": "root",
     "password": "",
